# LynxCode

./: .env.example  .gitignore  .nova.toml.example  ARCHITECTURE.md  DESIGN.md  README.md  build_history.py  install.sh  pyproject.toml
.claude/: settings.local.json
.omo/: NovaCode-resume.md
.omo/plans/: 补齐测试缺口.md
.omo/run-continuation/: ses_07fc8827cffeFe7BtS0v9jFpMn.json  ses_0845d86daffeOy5jlFSeJTNeUA.json  (+30 more)
archive/: README.md
benchmarks/: coding_tasks.json
docs/: configuration.md  memory.md  sandbox.md  skills.md
nova/: __init__.py  __main__.py  cli.py  testing.py
scripts/: cmp_reports.py  collect_resume_metrics.py  compare_traces.py  run_business_scenario_dogfood.py  run_large_scale_experiments.py  run_provider_experiments.py  run_real_session_acceptance.py  run_v3_human_scenario_gate.py  swebench_evaluator.py  swebench_pick_instances.py  swebench_pilot.py
tests/: test_agent_workers_acceptance.py  test_architecture_boundaries.py  test_ask_user.py  test_business_scenario_dogfood.py  test_context_governance_acceptance.py  test_context_manager.py  test_engine_acceptance.py  test_evaluator.py  test_memory.py  test_metrics.py  test_nova.py  test_permissions_acceptance.py  test_real_session_acceptance.py  test_release_smoke.py  test_run_evidence.py  test_run_store.py  test_runtime_evidence_acceptance.py  test_safety_invariants.py  test_sandbox_config.py  test_sandbox_runner.py  test_skills_acceptance.py  test_task_state.py  test_todo_ledger_acceptance.py  test_tool_policy_acceptance.py  test_tool_validation.py  test_tui.py  test_usage.py  test_v3_runtime.py
(+112 files in other folders)
