[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nova"
version = "0.3.0"
description = "Small local coding agent for OpenAI-compatible, Anthropic-compatible, and DeepSeek models"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.0.0",
  "textual>=0.86.0",
  "tomli>=2.0.0; python_version < '3.11'",
]

[project.scripts]
nova = "nova.cli:main"
nova-tui = "nova.tui.main:main"

[dependency-groups]
dev = [
  "pytest>=8.3.5",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.4.4",
]

[tool.setuptools.packages.find]
include = ["nova*"]

[tool.pytest.ini_options]
norecursedirs = [
  ".git",
  ".venv",
  "artifacts",
  "build",
  "dist",
]

# [tool.nova]
# max_steps = 50
# max_new_tokens = 0  # auto-detect by provider
# total_budget = 60000
# max_attempts = 52  # max_steps + 2
